Fixed loading spinner alignment for small screens.

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -13,10 +13,15 @@
     font-weight: 600;
     top: 50%;
     left: 50%;
+    min-width: max-content;
     transform: translate(-50%, -50%);
     z-index: 100;
     color: #fff;
     padding: $s3 $s6;
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 100px;
+
+    @include breakpoint-max($md) {
+        top: 60%;
+    }
 }
